src-tauri/agaric-core/src/snapshots/agaric_core__word_diff__tests__word_diff_delete.snap
---
source: agaric-core/src/word_diff.rs
expression: "compute_word_diff(old, new)"
---
- tag: Equal
  value: hello
- tag: Equal
  value: " "
- tag: Delete
  value: brave
- tag: Delete
  value: " "
- tag: Delete
  value: new
- tag: Delete
  value: " "
- tag: Equal
  value: world
