src-tauri/agaric-core/src/snapshots/agaric_core__word_diff__tests__word_diff_delete_to_empty.snap
---
source: agaric-core/src/word_diff.rs
expression: "compute_word_diff(old, new)"
---
- tag: Delete
  value: hello
- tag: Delete
  value: " "
- tag: Delete
  value: world
