src-tauri/agaric-core/src/snapshots/agaric_core__word_diff__tests__word_diff_insert.snap
---
source: agaric-core/src/word_diff.rs
expression: "compute_word_diff(old, new)"
---
- tag: Equal
  value: hello
- tag: Equal
  value: " "
- tag: Insert
  value: brave
- tag: Insert
  value: " "
- tag: Insert
  value: new
- tag: Insert
  value: " "
- tag: Equal
  value: world
