src-tauri/agaric-core/src/snapshots/agaric_core__word_diff__tests__word_diff_insert_from_empty.snap
---
source: agaric-core/src/word_diff.rs
expression: "compute_word_diff(old, new)"
---
- tag: Insert
  value: hello
- tag: Insert
  value: " "
- tag: Insert
  value: world
