src-tauri/agaric-core/src/snapshots/agaric_core__word_diff__tests__word_diff_unicode_combining_boundary.snap
---
source: agaric-core/src/word_diff.rs
expression: "compute_word_diff(old, new)"
---
- tag: Delete
  value: café
- tag: Insert
  value: café
- tag: Equal
  value: " "
- tag: Equal
  value: latte
